# procrast-cli

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  db.sqlite
.github/workflows/: build.yml  release.yml
src/: auth.rs  cmd.rs  command.rs  config.rs  context.rs  db.rs  input.rs  log.rs  main.rs  models.rs  network.rs  output.rs  sqlite.rs  sync.rs  utils.rs
src/cmd/: item.rs  list.rs  mod.rs  notes.rs
src/sqlite/: migration.rs  mod.rs  notes.rs
