[package]
name = "procrast-cli"
version = "0.1.0"
authors = ["Ian Macaulay <ismacaul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.23.1"
directories = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
