[package]
name = "procrast-cli"
version = "0.3.0"
authors = ["Ian Macaulay <ismacaul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.23.1"
directories = "3.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12"
rpassword = "5.0.0"
